syntax = "proto3";

package com.example.common;

option java_package = "com.example.common";
option java_outer_classname = "CommonProto";

// User information
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  Address address = 5;
}

// Address information
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zipCode = 4;
  string country = 5;
}

// Order item
message OrderItem {
  int64 productId = 1;
  string productName = 2;
  int32 quantity = 3;
  double price = 4;
}

// Order information
message Order {
  int64 id = 1;
  int64 userId = 2;
  repeated OrderItem items = 3;
  double totalAmount = 4;
  OrderStatus status = 5;
  string createdAt = 6;
}

// Order status enumeration
enum OrderStatus {
  UNKNOWN = 0;
  PENDING = 1;
  CONFIRMED = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

// Generic API response message
message ApiResponse {
  bool success = 1;
  string message = 2;
  string errorCode = 3;
}
